crates/forge/tests/e2e/snapshots/debugging/main__e2e__debugging__debugging_trace_multiple_events_component@2.18.0.snap
---
source: crates/forge/tests/e2e/debugging.rs
expression: stdout
---



[PASS] debugging_events_integrationtest::test_trace::test_debugging_trace_multiple_events (l1_gas: ~0, l1_data_gas: ~96, l2_gas: ~332360)
[test name] debugging_events_integrationtest::test_trace::test_debugging_trace_multiple_events
└─ [selector] emit_two_events
   └─ [events] [Event { keys: [0x2b0cdef3c28f9d954382f060df168ae56204d5937d2f0cd1fd9ce759afaf095], data: [0x2a] }, Event { keys: [0x2b0cdef3c28f9d954382f060df168ae56204d5937d2f0cd1fd9ce759afaf095], data: [0x2b] }]
