crates/forge/tests/e2e/snapshots/debugging/main__e2e__debugging__snap_debugging_trace_events_component_empty_list@2.20.1.snap
---
source: crates/forge/tests/e2e/debugging.rs
expression: stdout
---



[PASS] debugging_events_integrationtest::test_trace::test_debugging_trace_eventless_success (l1_gas: ~0, l1_data_gas: ~96, l2_gas: ~268510)
[test name] debugging_events_integrationtest::test_trace::test_debugging_trace_eventless_success
└─ [selector] do_not_emit
   └─ [events] []
