crates/forge/tests/e2e/snapshots/debugging/main__e2e__debugging__snap_debugging_trace_events_component_only@2.17.0.snap
---
source: crates/forge/tests/e2e/debugging.rs
expression: stdout
---



[PASS] debugging_events_integrationtest::test_trace::test_debugging_trace_events_component (l1_gas: ~0, l1_data_gas: ~96, l2_gas: ~305070)
[test name] debugging_events_integrationtest::test_trace::test_debugging_trace_events_component
└─ [selector] emit_event
   └─ [events] [ValueEmitted { value: 0x2a }]
